--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
     -->
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>D2Trade</title>
 </head>
 
 <body>
